--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ dependencies {
 
     // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
     // You may need to force-disable transitiveness on them.
+
+    modImplementation "io.github.ladysnake:Satin:${satin_version}"
+    include "io.github.ladysnake:Satin:${satin_version}"
 }
 
 processResources {
