--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ archives_base_name=hexaplex
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.25.1+build.416-1.16
+satin_version = 1.5.1
