--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,6 @@ maven_group=lazurite
 archives_base_name=hexaplex
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.25.1+build.416-1.16
-satin_version = 1.5.1
+fabric_version=0.29.0+1.16
+satin_version=1.5.1
+fiber_version=0.23.0-2
