--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,18 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.7
-loader_version=0.10.8
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.1
+loader_version=0.11.1
 # Mod Properties
-mod_version=1.0.0
+mod_version=0.1.0
 maven_group=lazurite
 archives_base_name=hexaplex
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.29.1+1.16
+fabric_version=0.29.4+1.16
 satin_version=1.5.1
 fiber_version=0.23.0-2
+cloth_version=4.8.3
+fiber2cloth_version=3.0.1
+modmenu_version=1.14.13+build.19
