--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.1
-loader_version=0.11.1
+minecraft_version=21w10a
+yarn_mappings=21w10a+build.23
+loader_version=0.11.3
 # Mod Properties
 mod_version=0.1.0
 maven_group=lazurite
 archives_base_name=hexaplex
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.29.4+1.16
+fabric_version=0.32.2+1.17
 satin_version=1.5.1
 fiber_version=0.23.0-2
 cloth_version=4.8.3
