--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ yarn_mappings=1.16.5+build.1
 loader_version=0.11.1
 # Mod Properties
 mod_version=0.1.0
-maven_group=lazurite
+maven_group=dev.lazurite
 archives_base_name=hexaplex
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
