--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,17 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.1
-loader_version=0.11.1
-# Mod Properties
-mod_version=0.1.0
-maven_group=lazurite
-archives_base_name=hexaplex
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.29.4+1.16
-satin_version=1.5.1
-fiber_version=0.23.0-2
-cloth_version=4.8.3
-fiber2cloth_version=3.0.1
-modmenu_version=1.14.13+build.19
+org.gradle.jvmargs=-Xmx2G
+
+loom_version=0.12-SNAPSHOT
+
+min_minecraft_version=~1.19
+# 0.14.8 needed for 1.19.1
+min_fabric_loader_version=>=0.14.8
+# fapi is a transitive dep
+min_fabric_api_version=*
+
+minecraft_version=1.19.1
+fabric_loader_version=0.14.8
+satin_version=1.9.0
+cloth_version=8.0.75
+modmenu_version=4.0.5
+
+hexaplex_version=1.0.0
