--- a/build.gradle
+++ b/build.gradle
@@ -1,92 +1,67 @@
 plugins {
-    id 'fabric-loom' version '0.5-SNAPSHOT'
-    id 'maven-publish'
+    id 'fabric-loom' version "$loom_version"
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+group 'dev.lazurite'
+version hexaplex_version
 
-archivesBaseName = project.archives_base_name
-version = project.mod_version
-group = project.maven_group
-
-minecraft {
-    accessWidener "src/main/resources/hexaplex.accesswidener"
-}
-
-dependencies {
-    //to change the versions see the gradle.properties file
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-    // Fabric API. This is technically optional, but you probably want it anyway.
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-    // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-    // You may need to force-disable transitiveness on them.
-
-    modImplementation "io.github.ladysnake:Satin:${project.satin_version}"
-    include "io.github.ladysnake:Satin:${project.satin_version}"
-
-    modImplementation "me.zeroeightsix:fiber:${project.fiber_version}"
-    include "me.zeroeightsix:fiber:${project.fiber_version}"
-
-    modImplementation "me.shedaniel.cloth:config-2:${project.cloth_version}"
-    include "me.shedaniel.cloth:config-2:${project.cloth_version}"
-
-    modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
-}
-
-processResources {
-    inputs.property "version", project.version
-
-    from(sourceSets.main.resources.srcDirs) {
-        include "fabric.mod.json"
-        expand "version": project.version
-    }
-
-    from(sourceSets.main.resources.srcDirs) {
-        exclude "fabric.mod.json"
-    }
-}
-
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
-}
-
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = "sources"
-    from sourceSets.main.allSource
-}
-
-jar {
-    from "LICENSE"
-}
-
-// configure the maven publication
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            // add all the jars that should be included when publishing to maven
-            artifact(remapJar) {
-                builtBy remapJar
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
+repositories {
+    maven {
+        name = 'Ladysnake'
+        url = 'https://ladysnake.jfrog.io/artifactory/mods'
+        content {
+            includeGroup 'io.github.ladysnake'
+            includeGroupByRegex 'io\\.github\\.onyxstudios.*'
         }
     }
 
-    // select the repositories you want to publish to
-    repositories {
-        // uncomment to publish to the local maven
-        // mavenLocal()
+    maven {
+        name 'shedaniel'
+        url 'https://maven.shedaniel.me'
+    }
+
+    maven {
+        name 'TerraformersMC'
+        url 'https://maven.terraformersmc.com/releases'
+    }
+}
+
+dependencies {
+    mappings loom.officialMojangMappings()
+    minecraft "com.mojang:minecraft:$minecraft_version"
+    modImplementation "net.fabricmc:fabric-loader:$fabric_loader_version"
+
+    modImplementation "io.github.ladysnake:satin:$satin_version"
+    include "io.github.ladysnake:satin:$satin_version"
+
+    modImplementation "me.shedaniel.cloth:cloth-config-fabric:$cloth_version"
+
+    modImplementation "com.terraformersmc:modmenu:$modmenu_version"
+}
+
+java {
+    toolchain.languageVersion = JavaLanguageVersion.of 17
+    withSourcesJar()
+}
+
+jar {
+    from 'LICENSE'
+}
+
+tasks.withType(ProcessResources) {
+    inputs.properties(
+            'version': project.version,
+            'min_minecraft_version': min_minecraft_version,
+            'min_fabric_loader_version': min_fabric_loader_version,
+            'min_fabric_api_version': min_fabric_api_version
+    )
+
+    filesMatching 'fabric.mod.json', {
+        expand(
+                'version': project.version,
+                'min_minecraft_version': min_minecraft_version,
+                'min_fabric_loader_version': min_fabric_loader_version,
+                'min_fabric_api_version': min_fabric_api_version
+        )
     }
 }
